[gd_scene load_steps=4 format=3 uid="uid://dqmibi4ahont0"]

[ext_resource type="Theme" uid="uid://vq7t843uek2d" path="res://ui/ui_theme.tres" id="1_wdvdm"]
[ext_resource type="Script" uid="uid://bxmpo8ovb6bjr" path="res://scripts/ui/tutorial/basics_tutorial_ui.gd" id="2_tc4eo"]
[ext_resource type="AudioStream" uid="uid://yd4p56lq8lw2" path="res://sounds/complete_sound.mp3" id="3_bjpu6"]

[node name="BasicsTutorialUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wdvdm")
script = ExtResource("2_tc4eo")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -209.0
offset_right = 24.5
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "The basics tutorial"

[node name="TutorialContentLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "Welcome to the basics tutorial!"
fit_content = true

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Press me"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bjpu6")
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
